tests/valid/VarDecl_Valid_1.whiley
void main([string] args):
    x = 1
    println(str(x))
