tests/invalid/List_CompileFail_2.whiley
void main([string] args):
     x = a2[0]
